src/test/ui/structs/issue-91502.stderr
error[E0308]: mismatched types
  --> $DIR/issue-91502.rs:7:11
   |
LL |         ..old.as_ref().unwrap()
   |           ^^^^^^^^^^^^^^^^^^^^^ expected struct `Bar`, found `&Bar`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
